    definition, using strings as column names, as an alternative
    to the creation of the index outside of the Table.

  - A TypeDecorator of Integer can be used with a primary key
    column, and the "autoincrement" feature of various dialects
    as well as the "sqlite_autoincrement" flag will honor
    the underlying database type as being Integer-based.
    [ticket:2005]

  - Result-row processors are applied to pre-executed SQL 
    defaults, as well as cursor.lastrowid, when determining
    the contents of result.inserted_primary_key.
    [ticket:2006]

  - Bind parameters present in the "columns clause" of a select
    are now auto-labeled like other "anonymous" clauses,
    which among other things allows their "type" to be meaningful
    when the row is fetched, as in result row processors.

  - TypeDecorator is present in the "sqlalchemy" import space.

- mssql
  - the String/Unicode types, and their counterparts VARCHAR/
    NVARCHAR, emit "max" as the length when no length is 
    specified.   This makes it more compatible with Postgresql's
    VARCHAR type which is similarly unbounded when no length
    specified.

0.6.6
=====
- orm
  - Fixed bug whereby a non-"mutable" attribute modified event
    which occurred on an object that was clean except for
    preceding mutable attribute changes would fail to strongly
    reference itself in the identity map. This would cause the
    object to be garbage collected, losing track of any changes
    that weren't previously saved in the "mutable changes"
    dictionary.

  - Fixed bug whereby "passive_deletes='all'" wasn't passing
    the correct symbols to lazy loaders during flush, thereby
    causing an unwarranted load.  [ticket:2013]

  - Fixed bug which prevented composite mapped
    attributes from being used on a mapped select statement. 
    [ticket:1997]. Note the workings of composite are slated to 
    change significantly in 0.7.

  - active_history flag also added to composite(). 